--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+h1,h3{
   text-align: center;
+  margin: 2%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main{
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar{
+  background-color:#E9E9E9;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-body{
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  place-content: flex-end;
+  place-content: space-between;
+}
+.recipesDiv{
+  display: grid;
+  grid-template-columns:  375px 375px 375px;
+  padding: 2%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.recipesDiv img{
+ height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+@media (min-width: 481px) and (max-width: 767px) {
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .recipesDiv{
+      display: grid;
+      grid-template-columns:  300px;
+      padding: 2%;
+      gap:10px;
+      justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  
+  .recipesDiv{
+      display: grid;
+      grid-template-columns:  355px;
+      padding: 2%;
+      gap:10px;
+      justify-content: center;
   }
 }
